Fix z-index click event fall-through

--- a/static/cards.css
+++ b/static/cards.css
@@ -91,8 +91,6 @@ body {
 .card {
 	position: absolute;
 	background-color: #ccc;
-	transform: rotateY(0deg);
-	-webkit-transform: rotateY(0deg);
 }
 .synced .card {
 	transition: transform linear .25s;
@@ -120,6 +118,8 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	/* fix stacking order */
+	-webkit-transform: translateZ(1px);
 }
 
 .front {
